<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    app:labelVisibilityMode="labeled">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_property_request"
        android:title="@string/property_request" />

    <item
        android:id="@+id/navigation_all_property"
        android:icon="@drawable/ic_property"
        android:title="@string/all_property" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_all_users"
        android:title="@string/title_all_user" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_transaction_request"
        android:title="@string/transaction_request" />

</menu>