<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ProfileActivity">
    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="false"
        app:elevation="5dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_name_edit_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/name_login"
                    android:textColorHint="@color/textView_hint_editPro"
                    app:boxStrokeColor="@color/textView_box_select_color"
                    app:hintTextColor="@color/textView_hint_layout_editPro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_name_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/textView_editPro"
                        android:theme="@style/editText_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_email_edit_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/textView_hint_editPro"
                    app:boxStrokeColor="@color/textView_box_select_color"
                    app:hintTextColor="@color/textView_hint_layout_editPro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_email_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/textView_editPro"
                        android:theme="@style/editText_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_password_edit_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password_login"
                    android:textColorHint="@color/textView_hint_editPro"
                    app:boxStrokeColor="@color/textView_box_select_color"
                    app:hintTextColor="@color/textView_hint_layout_editPro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/textView_editPro"
                        android:theme="@style/editText_style" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_phone_edit_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_login"
                    android:textColorHint="@color/textView_hint_editPro"
                    app:boxStrokeColor="@color/textView_box_select_color"
                    app:hintTextColor="@color/textView_hint_layout_editPro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_phone_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/textView_editPro"
                        android:theme="@style/editText_style" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_add_edit_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address_title"
                    android:textColorHint="@color/textView_hint_editPro"
                    app:boxStrokeColor="@color/textView_box_select_color"
                    app:hintTextColor="@color/textView_hint_layout_editPro">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_add_edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/textView_editPro"
                        android:theme="@style/editText_style" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>